formatted downTime and added parsed for bank clients